fix styling issues that made direct entry pop-up infeasible on small devices

--- a/styles/imggen.css
+++ b/styles/imggen.css
@@ -77,8 +77,9 @@ em {
 #dirform {
     display: none;  /* TODO */
     position: fixed;
-    bottom: 0;
+    top: 10px;
     right: 15px;
+    left: 15px;
     z-index: 9;
     background-color: var(--pop-up-bg-color);
     padding: 10px;
